// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/Spacer Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-1hghm4b-0 ijeove"
    size="4"
  />
</div>
`;

exports[`Storyshots Layout/Spacer M Sizes 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-1hghm4b-0 iRleBS"
    size="0"
  />
  <div
    className="sc-1hghm4b-0 ijeove"
    size="4"
  />
  <div
    className="sc-1hghm4b-0 chFvui"
    size="8"
  />
  <div
    className="sc-1hghm4b-0 dpayLK"
    size="12"
  />
  <div
    className="sc-1hghm4b-0 hlBhmi"
    size="16"
  />
  <div
    className="sc-1hghm4b-0 jlFlyy"
    size="24"
  />
  <div
    className="sc-1hghm4b-0 gZEXkq"
    size="32"
  />
  <div
    className="sc-1hghm4b-0 qzyLK"
    size="48"
  />
  <div
    className="sc-1hghm4b-0 eUhKfK"
    size="56"
  />
  <div
    className="sc-1hghm4b-0 gUlOsa"
    size="64"
  />
</div>
`;

exports[`Storyshots Layout/Spacer Sizes 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-1hghm4b-0 iRleBS"
    size="0"
  />
  <div
    className="sc-1hghm4b-0 ijeove"
    size="4"
  />
  <div
    className="sc-1hghm4b-0 chFvui"
    size="8"
  />
  <div
    className="sc-1hghm4b-0 dpayLK"
    size="12"
  />
  <div
    className="sc-1hghm4b-0 hlBhmi"
    size="16"
  />
  <div
    className="sc-1hghm4b-0 jlFlyy"
    size="24"
  />
  <div
    className="sc-1hghm4b-0 gZEXkq"
    size="32"
  />
  <div
    className="sc-1hghm4b-0 qzyLK"
    size="48"
  />
  <div
    className="sc-1hghm4b-0 eUhKfK"
    size="56"
  />
  <div
    className="sc-1hghm4b-0 gUlOsa"
    size="64"
  />
</div>
`;
